--- a/style.css
+++ b/style.css
@@ -27,10 +27,11 @@ body {
 
 img.birthday {
   width: 100%;
-  max-height: 45vh;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 1.5em;
+  height: auto
+  max-height: 40vh;
+  object-fit: contain;
+  border-radius: 8px;
+  margin-bottom: 1.2em;
   opacity: 0;
   transform: translateY(-20px);
   transition: opacity 2s ease, transform 2s ease;
@@ -78,3 +79,10 @@ p {
   font-size: 1rem;
   margin-top: 1em;
 }
+
+@media (max-width: 768px) {
+    img.birthday {
+      max-height: 45vh;
+    }
+  }
+  
